Solo falta que guarde reservaciones a la DB y la descarga de PDF

--- a/myapp/templates/salones/lista_salones.html
+++ b/myapp/templates/salones/lista_salones.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/base.html' %}
+{% extends 'theme/base.html' %}
 {% block title %}Salones Disponibles{% endblock %}
 
 {% block content %}
